@@ -29,6 +29,7 @@ version ? (????-??-??):
   - BTS#0000591: fixed problems with octet-format mask in IP checking 
     procedures for 'allow_from' option and users authorization (alec)
   - improved getnetaddr(), and getbraddr() functions (alec)
+  - added Sale Registry in "extended" format (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
